@@ -5,7 +5,7 @@
 Authors of pihwm
 ================
 
-The original author is Omer Kilic <omer@kilic.name> of Erlang solutions.
+The original author is Omer Kilic <omerkilic@gmail.com> of Erlang solutions.
 
 The code was restructured and documentation provided by Jeremy Bennett
 <jeremy.bennett@embecosm.com> of Embecosm.
